# mergen

./: .gitignore  .readthedocs.yaml  01_quickstart.ipynb  01_quickstart.py  01_quickstart.py.md5  01_quickstart.rst  02_parameter_types.codeobj.json  02_parameter_types.ipynb  02_parameter_types.py  02_parameter_types.py.md5  02_parameter_types.rst  03_advanced_design.codeobj.json  03_advanced_design.ipynb  03_advanced_design.py  03_advanced_design.py.md5  03_advanced_design.rst  04_choosing_criteria.codeobj.json  04_choosing_criteria.ipynb  04_choosing_criteria.py  04_choosing_criteria.py.md5  04_choosing_criteria.rst  05_choosing_algorithm.codeobj.json  05_choosing_algorithm.ipynb  05_choosing_algorithm.py.md5  05_choosing_algorithm.rst  06_sample_size.codeobj.json  06_sample_size.ipynb  06_sample_size.py.md5  06_sample_size.rst  07_extra_sets.codeobj.json  07_extra_sets.ipynb  07_extra_sets.py  07_extra_sets.py.md5  07_extra_sets.rst  08_resume_existing.codeobj.json  08_resume_existing.ipynb  08_resume_existing.py  08_resume_existing.py.md5  08_resume_existing.rst  09_sequential_workflow.codeobj.json  (+42 more)
.github/workflows/: docs-gallery.yml  examples.yml  test.yml  tests.yaml
docs/: citing.md  conf.py  generate_docs_images.py  index.md
docs/_static/: custom.css  custom.js
docs/about/: citing.md  index.md
docs/api/: algorithms.md  criteria.md  distances.md  index.md  metrics.md  output.md  sampler.md  sequential.md  space.md
docs/explanation/: choosing_algorithm.md  choosing_criterion.md  design_philosophy.md  index.md  quality_metrics.md  sample_size.md
docs/getting_started/: first_design.md  index.md  installation.md
docs/how-to/: compare_designs.md  constraints_exclusions.md  domain_examples.md  export_reports.md  index.md  parameter_types.md
docs/tutorials/: first_design.md  index.md  understanding_output.md
docs/user_guide/: ai_assistant.md  index.md  overview.md
docs/user_guide/explanation/: choosing_algorithm.md  choosing_criterion.md  index.md  why_space_filling.md
docs/user_guide/how-to/: compare_designs.md  parameter_types.md  sequential_designs.md
examples/: 01_quickstart.py  02_parameter_types.py  03_advanced_design.py  04_choosing_criteria.py  05_choosing_algorithm.py  06_sample_size.py  07_extra_sets.py  08_resume_existing.py  09_sequential_workflow.py  10_outputs_and_reports.py  11_wetlab_biology.py  12_cfd_engineering.py  13_ml_hyperparameters.py  14_bsm_2hdm_phenomenology.py  15_beamline_optics.py  GALLERY_HEADER.rst  README.md
src/mergen/: __init__.py  criteria.py  distances.py  metrics.py  output.py  pipeline.py  sampler.py  sequential.py  space.py
src/mergen/algorithms/: __init__.py  base.py  ese.py  sa.py  sce.py
src/mergen/criteria/: __init__.py  base.py  cd2.py  maxpro.py  maxproqq.py  phi_p.py  qqd.py  stratified.py  umaxpro.py
tests/: conftest.py  test_advanced.py  test_algorithms.py  test_criteria.py  test_distances.py  test_metrics.py  test_output.py  test_sampler.py  test_sequential.py  test_space.py  test_validation.py
