[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "mergen-doe"
dynamic         = ["version"]
description     = "Space-filling Design of Experiments for Python"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.9"

authors = [
    { name = "Ali Can Canbay", email = "acanbay@ankara.edu.tr" },
]

keywords = [
    "design of experiments",
    "space-filling",
    "Latin hypercube",
    "sampling",
    "computer experiments",
    "surrogate modeling",
    "experimental design",
    "optimization",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "joblib>=1.2",
    "tabulate>=0.9",
    "jinja2>=3.0",
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1",     # only needed for result.to_excel()
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
docs = [
    # Lower bounds only — pip resolves the right release per Python
    # version (e.g. Sphinx 7.4.x on 3.9, 8.x on 3.10+). No upper pins.
    "sphinx>=7.3",
    "pydata-sphinx-theme>=0.15",
    "myst-nb>=1.1",             # brings myst-parser for Markdown pages
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "sphinx-gallery>=0.15,<0.22",   # executed example gallery; upper
    # pin because conf.py overrides two of its internal layout choices
    "openpyxl>=3.1",            # example 10 demonstrates Excel export,
    # and the docs build executes every example
]

[project.urls]
Homepage      = "https://github.com/acanbay/mergen"
Issues        = "https://github.com/acanbay/mergen/issues"
# Documentation = "https://mergen.readthedocs.io"   # ReadTheDocs hazır olunca aç

[tool.hatch.version]
path = "src/mergen/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mergen"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "docs/",
    "examples/",
    "paper/",
    ".github/",
]
